infrastructure/components/kube-prometheus-stack/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
  hostnames:
    - grafana.internal.vw-ops.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-redirect
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
    sectionName: http
  hostnames:
  - grafana.internal.vw-ops.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
